[package]
name = "qntx-meili"
version = "0.8.6"
edition.workspace = true
description = "QNTX search provider plugin — routes SearchService RPCs to MeiliSearch"
license.workspace = true
authors = ["QNTX Contributors"]

[[bin]]
name = "qntx-meili"
path = "src/main.rs"

[dependencies]
# QNTX gRPC infrastructure
qntx-grpc = { path = "../../crates/qntx-grpc", features = ["plugin"] }
qntx-proto = { path = "../../crates/qntx-proto" }

# gRPC and async
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true

# MeiliSearch client
meilisearch-sdk = "0.27"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror.workspace = true
parking_lot.workspace = true
