[package]
name = "qntx-qdrant-plugin"
version = "0.1.0"
edition.workspace = true
description = "QNTX plugin providing SearchService (ADR-015) and VectorSearchService (ADR-016) with Qdrant's engine linked in-process (ADR-017)"
license.workspace = true
authors = ["QNTX Contributors"]

[[bin]]
name = "qntx-qdrant-plugin"
path = "src/main.rs"

[dependencies]
# QNTX gRPC infrastructure (proto + plugin server scaffolding)
qntx-grpc = { path = "../../crates/qntx-grpc", features = ["plugin"] }

# Qdrant's segment crate — the on-disk index (HNSW + payload) that powers
# a Qdrant collection, used directly in-process. The whole engine runs inside
# this plugin; there is no Qdrant binary and no external process.
#
# Pinned to a commit on qdrant/qdrant. The `segment` crate exposes
# `build_simple_segment` and friends as top-level `pub fn` — that's the
# documented embedding surface.
segment = { git = "https://github.com/qdrant/qdrant.git", rev = "eabee371fda447974a94d29fbaa675a6a596cc7b", package = "segment", default-features = false }

# gRPC and async
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
thiserror.workspace = true
parking_lot.workspace = true
