[package]
name = "qntx-app"
version = "0.1.0"
description = "QNTX Application (Desktop & Mobile)"
authors = ["Sebastiaan Brandon van Houten <me@sbvh.nl>"]
license = "MIT"
repository = "https://github.com/teranos/QNTX"
edition = "2021"

[lib]
name = "qntx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qntx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

# Generated types from QNTX Go source (single source of truth)
qntx-types = { path = "../../types/generated/rust" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
