[package]
name = "qntx-app"
version.workspace = true
description = "QNTX Application (Desktop & Mobile)"
authors = ["Sebastiaan Brandon van Houten <me@sbvh.nl>"]
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
name = "qntx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qntx"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# QNTX shared library (types only, no plugin infrastructure)
qntx = { path = "../../crates/qntx", default-features = true }

serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Desktop-only plugins (not available on iOS/Android)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"
qntx-vidstream = { path = "../../ats/vidstream", features = ["onnx"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
