[package]
name = "qntx-fuzzy"
version = "0.3.0"
edition = "2021"
description = "High-performance fuzzy matching library for QNTX (CGO)"
license = "MIT"
authors = ["QNTX Contributors"]

[dependencies]
# Core engine from qntx-core (with native optimizations)
qntx-core = { path = "../../../crates/qntx-core", features = ["native"] }

# Logging
log = "0.4"               # Logging facade
env_logger = "0.11"       # Environment-based logger configuration

# Thread safety for CGO (multiple goroutines)
parking_lot = "0.12"      # Fast RwLock

# JSON parsing for attribute search (CGO-specific feature)
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "qntx_fuzzy"
path = "src/lib.rs"
# cdylib for shared library (.so/.dylib/.dll)
# staticlib for static library (.a/.lib)
# rlib for Rust library (tests)
crate-type = ["cdylib", "staticlib", "rlib"]